2012-06-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-8, CRAN-released: 2012-06-20, r

	* R/CHMfactor.R (update): *DO* allow non-symmetric parent.
	* man/CHMfactor-class.Rd: be more clear about the two ways.
	* tests/factorizing.R: more update(<Chol>) testing

2012-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/matprod.R (chkDnProd): new testing function

2012-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/CHMfactor.R (update): now *warn* when parent is not formally
	symmetric and coerce it.

2012-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (chk.s): "check dots" - new utility -- possibly
	for base R ?

2012-04-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): now also works for
	'symmetric=TRUE' and lower triangular indices.

2012-04-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/CHMfactor.R (updown): new generic and methods,
	* man/updown.Rd: provided by Nicholas Nagle.

2012-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-7, CRAN-released: for a few days only.

2012-03-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-6, CRAN-released: 2012-03-30, r2775
	* DESCRIPTION (Depends): R >= 2.15.0

2012-03-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (sparseInt.r): recursion free (which does not help much).

2012-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dtCMatrix.c (dtCMatrix_sparse_solve): no longer use Alloca()
	here.
	* tests/factorizing.R (checkSchur): check against segfault example.

	* R/Matrix.R (chol2inv(<diagonalMatrix>)) new method.

2012-03-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (sparse.model.matrix, model.spmatrix): add 'verbose'
	argument in order to show to the user what's going on.
	* man/sparse.model.matrix.Rd: ditto

2012-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>
